--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li class="menu__item"><a href="#" class="menu__link"><h2>Why Alivio</h2></a></li>
         <li class="menu__item">
           <div class="menu__block__icon">
-            <img class="icon__img" src="img/icons/down-arrow.svg" alt="#">
+            <img class="icon__img" src="img/icons/down-arrow.png" alt="#">
           </div>
           <a href="#" class="menu__link"><h2>Solutions</h2></a>
           <ul class="sub__menu__list">
