--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width" />
-  <link href="https://fonts.googleapis.com/css?family=Lato:regular,500,600,700&_v=20220620155041" rel="stylesheet" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20220620155041" />
+  <link href="https://fonts.googleapis.com/css?family=Lato:regular,500,600,700,900&_v=20220623183513" rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20220623183513" />
   <title>Alivio</title>
 </head>
 
@@ -20,7 +20,7 @@
         <li class="menu__item"><a href="#" class="menu__link"><h2>Why Alivio</h2></a></li>
         <li class="menu__item">
           <div class="menu__block__icon">
-            <img class="icon__img" src="img/icons/down-arrow.png" alt="#">
+          <img class="icon__img" src="img/icons/down-arrow.png" alt="#">
           </div>
           <a href="#" class="menu__link"><h2>Solutions</h2></a>
           <ul class="sub__menu__list">
@@ -48,7 +48,7 @@
       </ul>
     </nav>
     <div class="button">
-      <a href="#" class="link">Sign in</a>
+      <div class="link"><a href="#">Sign in</a></div>
       <div class="button__link">
         <a href="#">Start Trial</a></a>
       </div>
@@ -61,22 +61,61 @@
 
     <main>
       <section class="alivio">
+        <img class="alivio__img" src="img/icons/background/BG.jpg" alt="#">
         <div class="alivio__wrap">
           <div class="alivio__container _container">
             <div class="alivio__title">
               <h2>Be aware, Manage well.</h2>
             </div>
-            <div class="alivio__text">
+            <div class="alivio__text _text__alivio">
               <h2>
                 Everyone experiences stress in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.
               </h2>
             </div>
-            <div class="alivio__button"><a href="#" class="button__link"><h2>Find Your Way</h2></a></div>
+            <div class="alivio__button _button"><a href="#" class="button__link _link__button"><h2>Find Your Way</h2></a></div>
           </div>
         </div>
       </section>
     </main>
-    
-    <script src="js/app.min.js?_v=20220620155041"></script>
+    <footer class="footer">
+  <div class="footer__container _container">
+    <div class="footer__column">
+      <div class="footer__title">
+        <a href="#"><h2>Alivio</h2></a>
+      </div>
+      <div class="footer__sub-title">
+        <a href="#"><h2>Why Alivio</h2></a>
+      </div>
+      <div class="footer__sub-title">
+        <a href="#"><h2>Solutions</h2></a>
+      </div>
+      <div class="footer__sub-title">
+        <a href="#"><h2>Community</h2></a>
+      </div>
+      <div class="footer__sub-title">
+        <a href="#"><h2>Pricing</h2></a>
+      </div>
+    </div>
+    <div class="footer__column">
+      <div class="footer__title">
+        <a href="#"><h2>Alivio</h2></a>
+      </div>
+      <div class="footer__sub-title">
+        <a href="#"><h2>Why Alivio</h2></a>
+      </div>
+      <div class="footer__sub-title">
+        <a href="#"><h2>Solutions</h2></a>
+      </div>
+      <div class="footer__sub-title">
+        <a href="#"><h2>Community</h2></a>
+      </div>
+      <div class="footer__sub-title">
+        <a href="#"><h2>Pricing</h2></a>
+      </div>
+    </div>      
+  </div>
+</footer>
+
+    <script src="js/app.min.js?_v=20220623183513"></script>
   </body>
 </html>
