--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width" />
-  <link href="https://fonts.googleapis.com/css?family=Lato:regular,500,600,700,900&_v=20220623183513" rel="stylesheet" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20220623183513" />
+  <link href="https://fonts.googleapis.com/css?family=Lato:regular,500,600,700,900&_v=20220624010750" rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20220624010750" />
   <title>Alivio</title>
 </head>
 
@@ -61,18 +61,22 @@
 
     <main>
       <section class="alivio">
-        <img class="alivio__img" src="img/icons/background/BG.jpg" alt="#">
         <div class="alivio__wrap">
+          <img class="alivio__img" src="img/icons/background/BG.jpg" alt="#">
           <div class="alivio__container _container">
-            <div class="alivio__title">
-              <h2>Be aware, Manage well.</h2>
+            <div class="alivio__column">
+              <div class="alivio__title">
+                <h2>Be aware, Manage well.</h2>
+              </div>
+              <div class="alivio__text _text__alivio">
+                <h2>
+                  Everyone experiences stress in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.
+                </h2>
+              </div>
+              <div class="alivio__button _button">
+                <a href="#" class="button__link _link__button"><h2>Find Your Way</h2></a>
+              </div>
             </div>
-            <div class="alivio__text _text__alivio">
-              <h2>
-                Everyone experiences stress in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.
-              </h2>
-            </div>
-            <div class="alivio__button _button"><a href="#" class="button__link _link__button"><h2>Find Your Way</h2></a></div>
           </div>
         </div>
       </section>
@@ -116,6 +120,6 @@
   </div>
 </footer>
 
-    <script src="js/app.min.js?_v=20220623183513"></script>
+    <script src="js/app.min.js?_v=20220624010750"></script>
   </body>
 </html>
